--- a/src/main/resources/templates/recipe/show.html
+++ b/src/main/resources/templates/recipe/show.html
@@ -48,7 +48,7 @@
                             </div>
                             <div class="col-md-3">
                                 <!--/*@thymesVar id="recipe" type="guru.springframework.domain.Recipe"*/-->
-                                <p th:text="${recipe.preTime} + ' Min '">30 min</p>
+                                <p th:text="${recipe.prepTime} + ' Min '">30 min</p>
                             </div>
                             <div class="col-md-3">
                                 <h5>Difficulty:</h5>
